kubernetes/frigate/ingress-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frigate-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: frigate-api.k.oneill.net

spec:
  tls:
  - hosts:
    - frigate-api.k.oneill.net
    secretName: frigate-api-tls
  rules:
  - host: frigate-api.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frigate
            port:
              number: 8971
